fix text alignment issues and get horizontal rule sorted

--- a/css/style.css
+++ b/css/style.css
@@ -369,7 +369,7 @@ section #devicons {
   padding-top: 4rem;
 }
 
-#page-footer p {
+#page-footer small {
   color: #0d306d;
 }
 
